Adding integration tests